# vector-pitch

./: .gitignore  .pre-commit-config.yaml  README.md  dashboard.html  index.html  pyproject.toml  vercel.json
.github/workflows/: lint.yml
api/: telemetry.js
assets/: dashboard.css  dashboard.js  difficulty_calibration.json  game.js  pitch.css  pitch_mtnn_embeddings.json  pitch_mtnn_embeddings_pre_con.json  responsive.css  site-nav.js  vectors.json
pipeline/: build_difficulty.py  build_features.py  build_vectors.py  train_mtnn.py
pipeline/data/: feature_manifest_tm_7ctx.json  feature_manifest_tm_9ctx.json  feature_manifest_tm_full.json  feature_manifest_tm_tourneys.json  meta_tm_7ctx.json  meta_tm_9ctx.json  meta_tm_full.json  meta_tm_tourneys.json  pitch_mtnn_report.json  tm_9ctx_con05_report.json  tm_9ctx_con05_smoke_report.json  tm_9ctx_report.json  tm_tourneys_report.json
tests/: test_difficulty.py
