[project]
name = "vector-pitch"
version = "0.6.0"
description = "MTNN pitch – 633 player-tournaments WC, Vercel static"
readme = "README.md"
requires-python = ">=3.11"
license = {text="MIT"}
authors = [{name="Cam"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.2","pre-commit>=3.5","pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = ["assets/*","data/*","__pycache__",".venv","dist",".git","api/*"]

[tool.ruff.lint]
select = ["E","W","F","I","B","C4","UP","N","S","PTH","TCH","RUF"]
ignore = ["S101","S603","S607","N803"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"assets/*" = ["ALL"]
"pipeline/*" = ["E402","TCH003"]

[tool.ruff.lint.isort]
known-first-party = ["pipeline"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests","pipeline"]
python_files = ["test_*.py"]
addopts = "-q"
